--- a/resources/view/web/assets/css/main.css
+++ b/resources/view/web/assets/css/main.css
@@ -4708,17 +4708,18 @@ footer{
     display: inline-flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
     background-color: transparent;
     padding: 10px 8px;
     border-radius: 12px;
     overflow: hidden;
-    height: 95px;
-    width: 95px;
+    height: 105px;
+    width: 105px;
     position: relative;
     margin-bottom: 0;
     grid-row: 1;
+    gap: 6px;
 }
 
 .home-widget-categories-item:not(:last-child){ 
@@ -4747,6 +4748,12 @@ footer{
     position: relative;
     font-size: 16px;
     line-height: 1.2;
+    min-height: 32px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
 }
 
 .home-widget-categories-item img{
