--- a/resources/view/web/assets/css/main.css
+++ b/resources/view/web/assets/css/main.css
@@ -1,10 +1,11 @@
 html{
     height: 100%;
+    font-size: 16px;
 }
 body{
     font-family: 'Manrope', sans-serif;
     background-color: white;
-    font-size: 16px;
+    font-size: 1rem;
     color: #333333;
     display: flex;
     flex-direction: column;
@@ -19,7 +20,7 @@ a:hover{
     color: #43E9E4;
 }
 label{
-    font-size: 15px;
+    font-size: 1rem;
 }
 button, 
 button:active, 
@@ -31,7 +32,7 @@ input, textarea{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;    
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 @font-face {
@@ -41,14 +42,14 @@ input, textarea{
   src: local('ALS Rubl'), url('../fonts/rouble.woff') format('woff');
 }
 .btn{
-    font-size: 15px;
+    font-size: 1rem;
 }
 hr{
     height: 1px; background-color: #999999; color: #999999; border: none;
 }
 
 h1{
-    font-size: 41px;
+    font-size: 2.25rem;
 }
 
 .container{
@@ -216,7 +217,7 @@ h1{
 }
 .header-wow-mobile-category a{
     color: black; display: inline-block; text-align: center; width: 75px; scroll-snap-align: start; margin: 0 5px; text-decoration: none;
-    display: block; word-break: break-all; font-size: 12px;
+    display: block; word-break: break-all; font-size: 0.75rem;
 }
 .header-wow-mobile-category a:hover{
     color: #f95146;
