город в профиле, пересыл в объявлении

--- a/resources/view/dashboard_1b5e1d4417851537700034c96d7b5559/assets/css/main.css
+++ b/resources/view/dashboard_1b5e1d4417851537700034c96d7b5559/assets/css/main.css
@@ -1,3 +1,16 @@
+:root {
+  --bs-root-font-size: 16px;
+  --bs-body-font-size: 1rem;
+  --bs-body-line-height: 1.5;
+  --bs-btn-font-size: 1rem;
+  --bs-dropdown-font-size: 1rem;
+  --bs-navbar-brand-font-size: 1rem;
+  --bs-pagination-font-size: 0.9375rem;
+  --bs-tooltip-font-size: 0.875rem;
+  --bs-popover-font-size: 0.9375rem;
+  --bs-popover-header-font-size: 1rem;
+}
+
 
 .light-style .menu .app-brand.demo {
   height: 64px;
